Передача данных (переменных) в шаблоны

--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Главная страница</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<h1>Главная страница о женщинах!</h1>
+<h1>{{ title }}</h1>
+<p>{{ lst }}</p>
+<p>{{ set }}</p>
+<p>{{ class.a }} {{ class.b }}</p>
+<p>{{ dict }}</p>
 </body>
 </html>
