--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -4,15 +4,16 @@
     <title>{{ title }}</title>
 </head>
 <body>
+<p>{{ menu|join:" | " }}</p>
 <h1>{{ title }}</h1>
-<p>{{ lst }}</p>
-<p>{{ set }}</p>
-{% if class.a|divisibleby:"2" %}
-<p>Условие выполнилось: "{{ class.a }} делится на 2"</p>
-{% else %}
-<p>Условие не выполнилось: "{{ class.a }} не делится на 2"</p>
-{% endif %}
-<p>{{ class.a }} {{ class.b }}</p>
-<p>{{ dict }}</p>
+{% for post in posts %}
+    {% if post.is_published %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.content }}</p>
+        {% if not forloop.last %}
+            <hr>
+        {% endif %}
+    {% endif %}
+{% endfor %}
 </body>
 </html>
