--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -16,7 +16,7 @@
     {% if post.is_published %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.content }}</p>
-        <p><a href="post/{{ post.id }}">Перейти по ссылке</a></p>
+        <p><a href="{% url 'post' post.id %}">Перейти по ссылке</a></p>
         {% if not forloop.last %}
             <hr>
         {% endif %}
