Наследование шаблонов (extends). Тег include

--- a/sitewomen/women/templates/women/about.html
+++ b/sitewomen/women/templates/women/about.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
-<h1>Это сайт о женщинах!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>{{ title }}</h1>
+{% endblock %}
