--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-{% for m in menu %}
-    <ul>
-        {% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
-            <a href="{% url m.url_name %}">{{ m.title }}</a>
-        </li>
-    </ul>
-{% endfor %}
-<h1>{{ title }}</h1>
-{% for post in posts %}
-    {% if post.is_published %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.content }}</p>
-        <p><a href="{% url 'post' post.id %}">Перейти по ссылке</a></p>
-        {% if not forloop.last %}
-            <hr>
+{% extends "base.html" %}
+
+{% block content %}
+{% include 'women/includes/nav.html' %}
+    <h1>{{ title }}</h1>
+    {% for post in posts %}
+        {% if post.is_published %}
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.content }}</p>
+            <p><a href="{% url 'post' post.id %}">Перейти по ссылке</a></p>
+            {% if not forloop.last %}
+                <hr>
+            {% endif %}
         {% endif %}
-    {% endif %}
-{% endfor %}
-</body>
-</html>
+    {% endfor %}
+
+{% include 'women/includes/nav.html' %}
+{% endblock %}
