--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,18 +1,17 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-{% include 'women/includes/nav.html' %}
-    <h1>{{ title }}</h1>
-    {% for post in posts %}
-        {% if post.is_published %}
-            <h2>{{ post.title }}</h2>
-            <p>{{ post.content }}</p>
-            <p><a href="{% url 'post' post.id %}">Перейти по ссылке</a></p>
-            {% if not forloop.last %}
-                <hr>
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-
-{% include 'women/includes/nav.html' %}
+<ul class="list-articles">
+	{% for p in posts %}
+	{% if p.is_published %}
+			<li><h2>{{p.title}}</h2>
+    {% autoescape off %}
+	{{p.content|linebreaks|truncatewords:40}}
+    {% endautoescape %}
+			<div class="clear"></div>
+			<p class="link-read-post"><a href="{% url 'post' p.id %}">Читать пост</a></p>
+			</li>
+	{% endif %}
+	{% endfor %}
+</ul>
 {% endblock %}
