--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load women_tags %}
 
 <!DOCTYPE html>
 <html>
@@ -28,13 +29,14 @@
 
 <table class="table-content" border=0 cellpadding="0" cellspacing="0">
 <tr>
+{% getcats as categories %}
 <!-- Sidebar слева -->
-	<td valign="top" class="left-chapters">
+<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
 		<li class="selected">Все категории</li>
-		<li><a href="#">Актрисы</a></li>
-		<li><a href="#">Певицы</a></li>
-		<li><a href="#">Спортсменки</a></li>
+		{% for cat in categories %}
+		<li><a href="{% url 'category' cat.id %}">{{ cat.name }}</a></li>
+		{% endfor %}
 		<li class="share">
 		</li>
 	</ul>
