Добавление тегов на сайт

--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -36,10 +36,15 @@
 		{% show_categories %}
 		<li class="share">
 		</li>
+		<li>{% show_all_tags %}</li>
 	</ul>
 </td>
 <!-- Конец Sidebar'а -->
 <td valign="top" class="content">
+
+<!-- Хлебные крошки -->
+{% block breadcrumbs %}
+{% endblock %}
 
 <!-- Блок контента -->
 	<div class="content-text">
