--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -30,21 +30,29 @@
 <table class="table-content" border=0 cellpadding="0" cellspacing="0">
 <tr>
 <!-- Sidebar слева -->
-<td valign="top" class="left-chapters">
+	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
+		{% if cat_selected == 0 %}
 		<li class="selected">Все категории</li>
-		{% show_categories %}
+		{% else %}
+		<li><a href="{% url 'home' %}">Все категории</a></li>
+		{% endif %}
+
+		{% show_categories cat_selected %}
+
 		<li class="share">
+		<p>Наш канал</p>
+		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
 		</li>
+
 		<li>{% show_all_tags %}</li>
 	</ul>
 </td>
 <!-- Конец Sidebar'а -->
 <td valign="top" class="content">
-
-<!-- Хлебные крошки -->
-{% block breadcrumbs %}
-{% endblock %}
+	<!-- Хлебные крошки -->
+	{% block breadcrumbs %}
+	{% endblock %}
 
 <!-- Блок контента -->
 	<div class="content-text">
@@ -53,17 +61,15 @@
 	</div>
 <!-- Конец блока контента -->
 
- <!-- Блок навигации -->
 {% block navigation %}
 {% endblock %}
-<!-- Конец блока навигации -->
 
 </td></tr></table>
 </td></tr>
 <!-- Footer -->
 <tr><td valign=top>
 	<div id="footer">
-		<p>&copy; 2024 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.</p>
+		<p>&copy; 2023 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.</p>
 	</div>
 </td></tr></table>
 <!-- Конец footer'а и страницы -->
