--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -13,18 +13,27 @@
 <body>
 <table class="table-page" border=0 cellpadding="0" cellspacing="0">
 <tr><td valign=top>
-{% block mainmenu %}
-		<div class="header">
-			<ul id="mainmenu" class="mainmenu">
+	{% block mainmenu %}
+	<div class="header">
+		<ul id="mainmenu" class="mainmenu">
 			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
-{% for m in menu %}
-	{% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
-		<a href="{% url m.url_name %}">{{m.title}}</a></li>
-{% endfor %}
-			</ul>
-			<div class="clear"></div>
-		</div>
-{% endblock mainmenu %}
+			{% for m in mainmenu %}
+				<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+			{% endfor %}
+			{% if user.is_authenticated %}
+				<li class="last">{{ user.username }} |
+					<form method="post" action="{% url 'users:logout' %}">
+						{% csrf_token %}
+						<button type="submit">Выйти</button>
+					</form>
+				</li>
+			{% else %}
+				<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="#">Регистрация</a></li>
+			{% endif %}
+		</ul>
+		<div class="clear"></div>
+	</div>
+	{% endblock mainmenu %}
 
 
 <table class="table-content" border=0 cellpadding="0" cellspacing="0">
@@ -69,7 +78,7 @@
 <!-- Footer -->
 <tr><td valign=top>
 	<div id="footer">
-		<p>&copy; 2023 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.</p>
+		<p>&copy; 2024 Частичное или полное копирование информации с данного сайта для распространения на других ресурсах, в том числе и бумажных, строго запрещено.</p>
 	</div>
 </td></tr></table>
 <!-- Конец footer'а и страницы -->
