--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -28,7 +28,7 @@
 					</form>
 				</li>
 			{% else %}
-				<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="#">Регистрация</a></li>
+				<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="{% url 'users:register' %}">Регистрация</a></li>
 			{% endif %}
 		</ul>
 		<div class="clear"></div>
